Funcionando mensajes y colores

--- a/app/views/chat.scala.html
+++ b/app/views/chat.scala.html
@@ -98,6 +98,7 @@
 
 			//#### Message received from server?
 			websocket.onmessage = function(ev) {
+				//alert(ev.data)
 				var msg = JSON.parse(ev.data); //PHP sends Json data
 				var type = msg.type; //message type
 				var umsg = msg.message; //message text
