--- a/app/views/chat.scala.html
+++ b/app/views/chat.scala.html
@@ -60,7 +60,8 @@
 			}
 			
 			//create a new WebSocket object.
-			var wsUri = "ws://localhost:9000/chat";
+			//var wsUri = "ws://localhost:9000/chat";
+			var wsUri = "ws://192.168.1.204:9000/chat";
 			websocket = new WebSocket(wsUri);
 			
 		 	websocket.onopen = function(ev) { // connection is open 
